objects/Account_Activity_Digest__c/Account_Activity_Digest__c.object-meta.xml
<CustomObject>
    <label>Account Activity Digest</label>
    <nameField>
        <label>Account Activity Digest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Activity Digests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>