objects/Account_Activity_Digest__c/fields/Concerns_Issues_Risks__c.field-meta.xml
<CustomField>
    <fullName>Concerns_Issues_Risks__c</fullName>
    <label>Concerns Issues Risks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>