objects/Account_Activity_Digest__c/fields/Executive_Summary__c.field-meta.xml
<CustomField>
    <fullName>Executive_Summary__c</fullName>
    <description>This contains the executive summary for David / Orion, etc.  It will be parsed out of the CAD</description>
    <label>Executive Summary</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>