objects/Account_Activity_Digest__c/fields/Interesting_Information_Gathered__c.field-meta.xml
<CustomField>
    <fullName>Interesting_Information_Gathered__c</fullName>
    <label>Interesting Information Gathered</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>