objects/Account_Activity_Digest__c/fields/Products_Involved__c.field-meta.xml
<CustomField>
    <fullName>Products_Involved__c</fullName>
    <label>Products Involved</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>