objects/Account_Activity_Digest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>This will have the bubble up status ... which will be parsed out.</description>
    <label>Status</label>
    <length>32</length>
    <type>Text</type>
</CustomField>