objects/Account_Activity_Digest__c/fields/Tanium_Resources_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Tanium_Resources_Engaged__c</fullName>
    <label>Tanium Resources Engaged</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>